--- a/pom.xml
+++ b/pom.xml
@@ -75,9 +75,10 @@
 			<version>2.5</version>
 		</dependency>
 
-
-
-
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+		</dependency>
 
 
 	</dependencies>
