--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
 			<version>2.4.3</version>
 		</dependency>
 
+
 	</dependencies>
 
 	<build>
@@ -95,6 +96,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.4.3</version>
 			</plugin>
 		</plugins>
 	</build>
