--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 			</exclusions>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>5.4.5</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
