--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<version>2.4.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>5.3.4</version>
+		</dependency>
+
 
 	</dependencies>
 
